Fix mediaquery to prevent overlap of link and logo

--- a/css/03-partials/header.scss
+++ b/css/03-partials/header.scss
@@ -338,7 +338,7 @@
 .header__quick-link--scanner {
     display: none;
 
-    @media (min-width: 1150px) {
+    @media (min-width: 1200px) {
         display: inline-block;
         margin-right: 30px;
     }
